TpIntegradorDiuj/obj/Debug/grammarTestParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\nahuel\Desktop\Diseño\TpDiuj\TpIntegradorDiuj\grammarTest.g4 by ANTLR 4.6.4

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace TpIntegradorDiuj {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.4")]
[System.CLSCompliant(false)]
public partial class grammarTestParser : Parser {
	public const int
		INT=1, DOUBLE=2, PI=3, E=4, POW=5, NL=6, WS=7, ID=8, PLUS=9, EQUAL=10, 
		MINUS=11, MULT=12, DIV=13, LPAR=14, RPAR=15;
	public const int
		RULE_input = 0, RULE_setVar = 1, RULE_plusOrMinus = 2, RULE_multOrDiv = 3, 
		RULE_pow = 4, RULE_unaryMinus = 5, RULE_atom = 6;
	public static readonly string[] ruleNames = {
		"input", "setVar", "plusOrMinus", "multOrDiv", "pow", "unaryMinus", "atom"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "'pi'", "'e'", "'^'", "'\n'", null, null, "'+'", "'='", 
		"'-'", "'*'", "'/'", "'('", "')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "INT", "DOUBLE", "PI", "E", "POW", "NL", "WS", "ID", "PLUS", "EQUAL", 
		"MINUS", "MULT", "DIV", "LPAR", "RPAR"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "grammarTest.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public grammarTestParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class InputContext : ParserRuleContext {
		public InputContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_input; } }
	 
		public InputContext() { }
		public virtual void CopyFrom(InputContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class CalculateContext : InputContext {
		public PlusOrMinusContext plusOrMinus() {
			return GetRuleContext<PlusOrMinusContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(grammarTestParser.Eof, 0); }
		public ITerminalNode NL() { return GetToken(grammarTestParser.NL, 0); }
		public CalculateContext(InputContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.EnterCalculate(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.ExitCalculate(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgrammarTestVisitor<TResult> typedVisitor = visitor as IgrammarTestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCalculate(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ToSetVarContext : InputContext {
		public SetVarContext setVar() {
			return GetRuleContext<SetVarContext>(0);
		}
		public ITerminalNode NL() { return GetToken(grammarTestParser.NL, 0); }
		public InputContext input() {
			return GetRuleContext<InputContext>(0);
		}
		public ToSetVarContext(InputContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.EnterToSetVar(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.ExitToSetVar(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgrammarTestVisitor<TResult> typedVisitor = visitor as IgrammarTestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitToSetVar(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InputContext input() {
		InputContext _localctx = new InputContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_input);
		int _la;
		try {
			State = 24;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new ToSetVarContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 14; setVar();
				State = 15; Match(NL);
				State = 16; input();
				}
				break;

			case 2:
				_localctx = new CalculateContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 18; plusOrMinus(0);
				State = 20;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==NL) {
					{
					State = 19; Match(NL);
					}
				}

				State = 22; Match(Eof);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SetVarContext : ParserRuleContext {
		public SetVarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_setVar; } }
	 
		public SetVarContext() { }
		public virtual void CopyFrom(SetVarContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class SetVariableContext : SetVarContext {
		public ITerminalNode ID() { return GetToken(grammarTestParser.ID, 0); }
		public ITerminalNode EQUAL() { return GetToken(grammarTestParser.EQUAL, 0); }
		public PlusOrMinusContext plusOrMinus() {
			return GetRuleContext<PlusOrMinusContext>(0);
		}
		public SetVariableContext(SetVarContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.EnterSetVariable(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.ExitSetVariable(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgrammarTestVisitor<TResult> typedVisitor = visitor as IgrammarTestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSetVariable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SetVarContext setVar() {
		SetVarContext _localctx = new SetVarContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_setVar);
		try {
			_localctx = new SetVariableContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 26; Match(ID);
			State = 27; Match(EQUAL);
			State = 28; plusOrMinus(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PlusOrMinusContext : ParserRuleContext {
		public PlusOrMinusContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_plusOrMinus; } }
	 
		public PlusOrMinusContext() { }
		public virtual void CopyFrom(PlusOrMinusContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ToMultOrDivContext : PlusOrMinusContext {
		public MultOrDivContext multOrDiv() {
			return GetRuleContext<MultOrDivContext>(0);
		}
		public ToMultOrDivContext(PlusOrMinusContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.EnterToMultOrDiv(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.ExitToMultOrDiv(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgrammarTestVisitor<TResult> typedVisitor = visitor as IgrammarTestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitToMultOrDiv(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PlusContext : PlusOrMinusContext {
		public PlusOrMinusContext plusOrMinus() {
			return GetRuleContext<PlusOrMinusContext>(0);
		}
		public ITerminalNode PLUS() { return GetToken(grammarTestParser.PLUS, 0); }
		public MultOrDivContext multOrDiv() {
			return GetRuleContext<MultOrDivContext>(0);
		}
		public PlusContext(PlusOrMinusContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.EnterPlus(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.ExitPlus(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgrammarTestVisitor<TResult> typedVisitor = visitor as IgrammarTestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPlus(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MinusContext : PlusOrMinusContext {
		public PlusOrMinusContext plusOrMinus() {
			return GetRuleContext<PlusOrMinusContext>(0);
		}
		public ITerminalNode MINUS() { return GetToken(grammarTestParser.MINUS, 0); }
		public MultOrDivContext multOrDiv() {
			return GetRuleContext<MultOrDivContext>(0);
		}
		public MinusContext(PlusOrMinusContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.EnterMinus(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.ExitMinus(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgrammarTestVisitor<TResult> typedVisitor = visitor as IgrammarTestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMinus(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PlusOrMinusContext plusOrMinus() {
		return plusOrMinus(0);
	}

	private PlusOrMinusContext plusOrMinus(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		PlusOrMinusContext _localctx = new PlusOrMinusContext(_ctx, _parentState);
		PlusOrMinusContext _prevctx = _localctx;
		int _startState = 4;
		EnterRecursionRule(_localctx, 4, RULE_plusOrMinus, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new ToMultOrDivContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			State = 31; multOrDiv(0);
			}
			_ctx.stop = _input.Lt(-1);
			State = 41;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 39;
					_errHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new PlusContext(new PlusOrMinusContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_plusOrMinus);
						State = 33;
						if (!(Precpred(_ctx, 3))) throw new FailedPredicateException(this, "Precpred(_ctx, 3)");
						State = 34; Match(PLUS);
						State = 35; multOrDiv(0);
						}
						break;

					case 2:
						{
						_localctx = new MinusContext(new PlusOrMinusContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_plusOrMinus);
						State = 36;
						if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
						State = 37; Match(MINUS);
						State = 38; multOrDiv(0);
						}
						break;
					}
					} 
				}
				State = 43;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class MultOrDivContext : ParserRuleContext {
		public MultOrDivContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_multOrDiv; } }
	 
		public MultOrDivContext() { }
		public virtual void CopyFrom(MultOrDivContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class MultiplicationContext : MultOrDivContext {
		public MultOrDivContext multOrDiv() {
			return GetRuleContext<MultOrDivContext>(0);
		}
		public ITerminalNode MULT() { return GetToken(grammarTestParser.MULT, 0); }
		public PowContext pow() {
			return GetRuleContext<PowContext>(0);
		}
		public MultiplicationContext(MultOrDivContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.EnterMultiplication(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.ExitMultiplication(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgrammarTestVisitor<TResult> typedVisitor = visitor as IgrammarTestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMultiplication(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DivisionContext : MultOrDivContext {
		public MultOrDivContext multOrDiv() {
			return GetRuleContext<MultOrDivContext>(0);
		}
		public ITerminalNode DIV() { return GetToken(grammarTestParser.DIV, 0); }
		public PowContext pow() {
			return GetRuleContext<PowContext>(0);
		}
		public DivisionContext(MultOrDivContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.EnterDivision(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.ExitDivision(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgrammarTestVisitor<TResult> typedVisitor = visitor as IgrammarTestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDivision(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ToPowContext : MultOrDivContext {
		public PowContext pow() {
			return GetRuleContext<PowContext>(0);
		}
		public ToPowContext(MultOrDivContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.EnterToPow(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.ExitToPow(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgrammarTestVisitor<TResult> typedVisitor = visitor as IgrammarTestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitToPow(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MultOrDivContext multOrDiv() {
		return multOrDiv(0);
	}

	private MultOrDivContext multOrDiv(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		MultOrDivContext _localctx = new MultOrDivContext(_ctx, _parentState);
		MultOrDivContext _prevctx = _localctx;
		int _startState = 6;
		EnterRecursionRule(_localctx, 6, RULE_multOrDiv, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new ToPowContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			State = 45; pow();
			}
			_ctx.stop = _input.Lt(-1);
			State = 55;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 53;
					_errHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new MultiplicationContext(new MultOrDivContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_multOrDiv);
						State = 47;
						if (!(Precpred(_ctx, 3))) throw new FailedPredicateException(this, "Precpred(_ctx, 3)");
						State = 48; Match(MULT);
						State = 49; pow();
						}
						break;

					case 2:
						{
						_localctx = new DivisionContext(new MultOrDivContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_multOrDiv);
						State = 50;
						if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
						State = 51; Match(DIV);
						State = 52; pow();
						}
						break;
					}
					} 
				}
				State = 57;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class PowContext : ParserRuleContext {
		public PowContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pow; } }
	 
		public PowContext() { }
		public virtual void CopyFrom(PowContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PowerContext : PowContext {
		public UnaryMinusContext unaryMinus() {
			return GetRuleContext<UnaryMinusContext>(0);
		}
		public ITerminalNode POW() { return GetToken(grammarTestParser.POW, 0); }
		public PowContext pow() {
			return GetRuleContext<PowContext>(0);
		}
		public PowerContext(PowContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.EnterPower(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.ExitPower(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgrammarTestVisitor<TResult> typedVisitor = visitor as IgrammarTestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPower(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PowContext pow() {
		PowContext _localctx = new PowContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_pow);
		try {
			_localctx = new PowerContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 58; unaryMinus();
			State = 61;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				State = 59; Match(POW);
				State = 60; pow();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnaryMinusContext : ParserRuleContext {
		public UnaryMinusContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unaryMinus; } }
	 
		public UnaryMinusContext() { }
		public virtual void CopyFrom(UnaryMinusContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ChangeSignContext : UnaryMinusContext {
		public ITerminalNode MINUS() { return GetToken(grammarTestParser.MINUS, 0); }
		public UnaryMinusContext unaryMinus() {
			return GetRuleContext<UnaryMinusContext>(0);
		}
		public ChangeSignContext(UnaryMinusContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.EnterChangeSign(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.ExitChangeSign(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgrammarTestVisitor<TResult> typedVisitor = visitor as IgrammarTestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChangeSign(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ToAtomContext : UnaryMinusContext {
		public AtomContext atom() {
			return GetRuleContext<AtomContext>(0);
		}
		public ToAtomContext(UnaryMinusContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.EnterToAtom(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.ExitToAtom(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgrammarTestVisitor<TResult> typedVisitor = visitor as IgrammarTestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitToAtom(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UnaryMinusContext unaryMinus() {
		UnaryMinusContext _localctx = new UnaryMinusContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_unaryMinus);
		try {
			State = 66;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case MINUS:
				_localctx = new ChangeSignContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 63; Match(MINUS);
				State = 64; unaryMinus();
				}
				break;
			case INT:
			case DOUBLE:
			case PI:
			case E:
			case ID:
			case LPAR:
				_localctx = new ToAtomContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 65; atom();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AtomContext : ParserRuleContext {
		public AtomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atom; } }
	 
		public AtomContext() { }
		public virtual void CopyFrom(AtomContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ConstantPIContext : AtomContext {
		public ITerminalNode PI() { return GetToken(grammarTestParser.PI, 0); }
		public ConstantPIContext(AtomContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.EnterConstantPI(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.ExitConstantPI(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgrammarTestVisitor<TResult> typedVisitor = visitor as IgrammarTestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstantPI(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class VariableContext : AtomContext {
		public ITerminalNode ID() { return GetToken(grammarTestParser.ID, 0); }
		public VariableContext(AtomContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.EnterVariable(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.ExitVariable(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgrammarTestVisitor<TResult> typedVisitor = visitor as IgrammarTestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariable(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BracesContext : AtomContext {
		public ITerminalNode LPAR() { return GetToken(grammarTestParser.LPAR, 0); }
		public PlusOrMinusContext plusOrMinus() {
			return GetRuleContext<PlusOrMinusContext>(0);
		}
		public ITerminalNode RPAR() { return GetToken(grammarTestParser.RPAR, 0); }
		public BracesContext(AtomContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.EnterBraces(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.ExitBraces(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgrammarTestVisitor<TResult> typedVisitor = visitor as IgrammarTestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBraces(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ConstantEContext : AtomContext {
		public ITerminalNode E() { return GetToken(grammarTestParser.E, 0); }
		public ConstantEContext(AtomContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.EnterConstantE(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.ExitConstantE(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgrammarTestVisitor<TResult> typedVisitor = visitor as IgrammarTestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstantE(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DoubleContext : AtomContext {
		public ITerminalNode DOUBLE() { return GetToken(grammarTestParser.DOUBLE, 0); }
		public DoubleContext(AtomContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.EnterDouble(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.ExitDouble(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgrammarTestVisitor<TResult> typedVisitor = visitor as IgrammarTestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDouble(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IntContext : AtomContext {
		public ITerminalNode INT() { return GetToken(grammarTestParser.INT, 0); }
		public IntContext(AtomContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.EnterInt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IgrammarTestListener typedListener = listener as IgrammarTestListener;
			if (typedListener != null) typedListener.ExitInt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgrammarTestVisitor<TResult> typedVisitor = visitor as IgrammarTestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInt(this);
			else return visitor.VisitChildren(this);
		}
	}
